# analyzeAlignments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: extractWindow.cpp  homoruns.cpp
include/: extraFunctions.hpp  fastaParser.hpp
src/: extraFunctions.cpp  fastaParser.cpp
tests/: pol1263.fasta  querySequence.fasta  testK.fasta  tests.cpp
